--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>bank.core</groupId>
   <artifactId>online-banking-system</artifactId>
-  <version>Build 1</version>
+  <version>1</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
